--- a/style-light.css
+++ b/style-light.css
@@ -414,7 +414,7 @@ button:focus-visible {
   background-color: #222;
 }
 .site-footer {
-  text-align: fixed;
+  text-align: right;
   padding: 20px;
   font-size: 0.9rem;
   color: #2F3E46;
@@ -425,7 +425,7 @@ footer {
   background-color: #2F3E46;
   color: #FFF5E1;
   padding: 20px;
-  text-align: fixed;
+  text-align: right;
   font-size: 0.9rem;
 }
 
