--- a/style-dark.css
+++ b/style-dark.css
@@ -418,7 +418,7 @@ button:focus-visible {
   background-color: #222;
 }
 .site-footer {
-  text-align: center;
+  text-align: right;
   padding: 20px;
   font-size: 0.9rem;
   color: #2F3E46;
@@ -429,7 +429,7 @@ footer {
   background-color: #2F3E46;
   color: #FFF5E1;
   padding: 20px;
-  text-align: center;
+  text-align: right;
   font-size: 0.9rem;
 }
 
