--- a/style-light.css
+++ b/style-light.css
@@ -281,7 +281,7 @@ button:focus-visible {
 
 .product-cube {
   width: 250px;
-  height: auto;
+  height: 258px;
   border: 1px solid #ccc;
   border-radius: 12px;
   overflow: hidden;
