--- a/style-dark.css
+++ b/style-dark.css
@@ -111,7 +111,7 @@ nav ul li a:focus-visible {
 
 .product-link img {
   width: 100%;
-  height: 180px;
+  height: 100%;
   object-fit: cover;
   display: block;
   filter: brightness(0.85); /* subtle darkening */
