--- a/style-light.css
+++ b/style-light.css
@@ -110,7 +110,7 @@ nav ul li a:focus-visible {
 
 .product-link img {
   width: 100%;
-  height: 180px;
+  height: 100%px;
   object-fit: cover;
   display: block;
 }
