--- a/style-light.css
+++ b/style-light.css
@@ -112,7 +112,7 @@ nav ul li a:focus-visible {
 
 .product-link img {
   width: 100%;
-  height: 100%px;
+  height: 100%;
   object-fit: cover;
   display: block;
 }
