--- a/style-dark.css
+++ b/style-dark.css
@@ -281,17 +281,20 @@ button:focus-visible {
 }
 
 .product-image {
-  max-width: 100%;
-  max-height: 60%;
+  width: 100%;
+  height: 60%;
   object-fit: cover;
-  border-radius: 0;
 }
 
+
 .product-header {
+  flex: 1;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  padding: 10px;
 }
+
 
 .product-title {
   font-size: 0.75rem;
