--- a/style-light.css
+++ b/style-light.css
@@ -279,9 +279,13 @@ button:focus-visible {
 
 .product-image {
   width: 100%;
-  height: 60%;
+  height: 100%;
   object-fit: cover;
+  border-radius: 0;
+  display: block;
+  flex: 1;
 }
+
 
 .product-header {
   flex: 1;
