--- a/style-dark.css
+++ b/style-dark.css
@@ -106,24 +106,26 @@ nav ul li a:focus-visible {
 }
 
 .product-link {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   text-decoration: none;
   color: inherit;
 }
 
 .product-link img {
+  flex-grow: 1;
   width: 100%;
-  height: 100%;
   object-fit: cover;
+  border-radius: 12px 12px 0 0; /* if you want rounded top corners */
   display: block;
-  filter: brightness(0.85); /* subtle darkening */
 }
 
 .product-link .title {
-  font-size: 18px;
-  margin: 12px 10px;
+  margin: 10px;
   text-align: center;
-  color: var(--text-color);
+  font-size: 1rem;
+  flex-shrink: 0;
 }
 
 .product-details {
