--- a/style-light.css
+++ b/style-light.css
@@ -27,7 +27,7 @@
 body {
   font-family: 'Roboto', 'Open Sans', sans-serif;
   line-height: 1.6;
-  padding: 20px;
+  padding: 12px;
   background-color: var(--background-color);
   color: var(--text-color);
 }
@@ -44,10 +44,10 @@ button {
   display: inline-block;
   background-color: var(--primary-color);
   color: #fff;
-  padding: 10px 20px;
+  padding: 6px 12px;
   border: none;
   border-radius: 999px;
-  font-size: 16px;
+  font-size: 10px;
   font-weight: 600;
   text-align: center;
   text-decoration: none;
@@ -127,6 +127,12 @@ button:focus-visible,
   gap: 16px;
   padding: 20px 0;
   justify-content: center;
+}
+
+.product-card img {
+  width: 100%;
+  height: 60%;
+  object-fit: cover;
 }
 
 /* =====================================
