--- a/style-light.css
+++ b/style-light.css
@@ -166,8 +166,8 @@ button:focus-visible,
 }
 
 footer {
-  background-color: #2f3e46;
-  color: #fff5e1;
+  background-color: #f0f3f5;
+  color: #ec0e88;
   padding: 20px;
   text-align: center;
   font-size: 0.9rem;
